<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>tonypi_kickball_control</name>
    <version>0.0.1</version>
    <description>robot kick ball</description>
    <maintainer email="nuo.wu@horizon.cc">nuo.wu</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>ai_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>